--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -1144,7 +1144,7 @@ body {
 	background-image: url(../img/ship-gray.svg);
 	width: 470px;
 	height: 343px;
-	top: 77%;
+	bottom: 0;
 	left: 5%;
 }
 
