--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -373,9 +373,9 @@ body {
 	height: 5px;
 	width: 100%;
 }
-.cls-1 {
-	stroke: 3px;
-}
+/*.cls-1 {*/
+    /*stroke-width: 2px;*/
+/*}*/
 .line-wave-1 { bottom:  2px; }
 .line-wave-2 { bottom:  6px; }
 .line-wave-3 { bottom: 10px; }
@@ -950,7 +950,7 @@ body {
 		position: relative;
 		bottom: auto;
 		height: 2px;
-		background: rgba(168, 227, 255);
+		background: rgba(168, 227, 255, 1);
 	}
 	.wave-separator .line-wave {
 		margin-top: 7px;
@@ -1296,7 +1296,7 @@ body {
 		margin-right: 16px;
 	}
 	.comment__author {
-		display: -webkit-inline-flex;
+        display: -webkit-inline-flex;
 		display: -moz-inline-flex;
 		display: -ms-inline-flex;
 		display: -o-inline-flex;
@@ -1444,8 +1444,10 @@ body {
 	.fishing-point {
 		opacity: 0;
 		position: absolute;
-		width: 50px;
-		height: 15px;
+		/*width: 50px;*/
+		/*height: 15px;*/
+		width: 7%;
+		height: 3%;
 		background-image: url(../img/faq/fishing-point.svg);
 		background-repeat: no-repeat;
 		background-position: center;
@@ -1541,8 +1543,10 @@ body {
 	}
 	.bg-ship {
 		background-image: url(../img/ship-gray.svg);
-		width: 470px;
-		height: 343px;
+		/*width: 470px;*/
+		/*height: 343px;*/
+		width: 24.4799vw;
+		height: 17.865vw;
 		bottom: 0;
 		left: 5%;
 	}
@@ -1708,6 +1712,8 @@ body {
 		background-image: url(../img/kontakt-ship.svg);
 		width: 423px;
 		height: 309px;
+		width: 22.0313vw;
+		height: 16.0938vw;
 		top: 23%;
 		right: 10%;
 	}
@@ -1992,7 +1998,7 @@ body {
 		text-align: right;
 	}
 	.left {
-		text-align-last:
+		text-align: left;
 	}
 	.hide {
 		display: none;
