--- a/ivasi/css/grid.css
+++ b/ivasi/css/grid.css
@@ -5,7 +5,7 @@ FLEX GRID
 	width: 100%;
 	max-width: 1200px;
 	margin: 0 auto;
-	height: inherit;
+	/*height: inherit;*/
 }
 .row {
 	display: -webkit-flex;
@@ -17,7 +17,7 @@ FLEX GRID
 	flex-wrap: wrap;
 	width: 100%;
 	margin: 0 auto;
-	height: inherit;
+	/*height: inherit;*/
 	z-index: 5;
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12,
@@ -26,7 +26,7 @@ FLEX GRID
 .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12,
 .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12 {
 	display: block;
-	height: inherit;
+	/*height: inherit;*/
 }
 
 
