--- a/ivasi/css/style.css
+++ b/ivasi/css/style.css
@@ -48,6 +48,14 @@ body {
 	font-size: 1vh;
 	overflow-x: hidden;
 }
+@media (max-width: 700px) {
+	body {
+		font-size: 2vw;
+	}
+}
+header {
+	overflow-x: hidden;
+}
 .container {
 	width: 100%;
 	max-width: 1200px;
@@ -191,6 +199,159 @@ body {
 	height: inherit;
 }
 
+
+
+.burger_wrapper {
+	position: relative;
+	z-index: 299;
+	font-size: 1.5em;
+	display: none;
+	width: 4em;
+	height: 4em;
+	margin-right: .5em;
+	cursor: pointer;
+	text-align: center;
+
+	-ms-flex-order: 2;
+	order: 2;
+}
+.burger {
+	position: absolute;
+	top: 46%;
+	right: 5px;
+	display: inline-block;
+	width: 3em;
+	height: .3em;
+	min-height: 3px;
+	margin-left: 30px;
+	transition: opacity .3s;
+	border-radius: 5px;
+	background-color: #01336e;
+}
+.burger:before {
+	content: '';
+	position: absolute;
+	top: -.8em;
+	right: 0;
+	display: inline-block;
+	width: 3em;
+	height: .3em;
+	min-height: 3px;
+	transition: transform .3s;
+	border-radius: 5px;
+	background-color: #01336e;
+}
+.burger:after {
+	content: '';
+	position: absolute;
+	right: 0;
+	bottom: -.8em;
+	display: inline-block;
+	width: 3em;
+	height: .3em;
+	min-height: 3px;
+	transition: transform .3s;
+	border-radius: 5px;
+	background-color: #01336e;
+}
+.burger-active {
+	transition: opacity .3s;
+	background-color: transparent;
+}
+.burger-active:before {
+	top: 0;
+	width: 3.6em;
+	transition: transform .3s;
+	transform: rotate(-45deg);
+}
+.burger-active:after {
+	top: 0;
+	width: 3.6em;
+	transition: transform .3s;
+	transform: rotate(45deg);
+}
+
+
+@media (max-width: 700px) {
+	.header__menu {
+		top: 0;
+		height: 6.4em;
+	}
+	.main-menu-wrap {
+		height: 6.4em;
+	}
+	.logo {
+		width: 11.9em;
+		height: 14.3em;
+		left: 2.5em;
+		top: 0;
+	}
+	.logo__shadow {
+		width: 98%;
+		left: 1%;
+	}
+	.main-menu {
+		width: 60vw;
+		position: fixed;
+		top: 3.4em;
+		right: 0;
+		padding: 0;
+		flex-direction: column;
+		background-color: #fff;
+		z-index: 9999;
+		height: calc(100vh - 3.4em);
+		justify-content: flex-start;
+		display: none;
+	}
+	.main-menu.visible {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+	}
+	.main-menu__link {
+		font-size: 1.5em;
+		line-height: 2.5;
+	}
+
+	.burger_wrapper {
+		display: block;
+		margin-right: 0;
+		top: 50%;
+		position: absolute;
+		right: 1em;
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		-o-transform: translateY(-50%);
+		transform: translateY(-50%);
+	}
+
+	.home-slider-wrap {
+		height: 43em;
+	}
+	.home-slider, .home-slider__slide {
+		height: 100%;
+		position: relative;
+		overflow: hidden;
+	}
+	.home-slider__slide img {
+		position: absolute;
+		top: 0;
+		left: 50%;
+		-webkit-transform: translateX(-50%);
+		-ms-transform: translateX(-50%);
+		-o-transform: translateX(-50%);
+		transform: translateX(-50%);
+	}
+	.home-slider:after {
+		right: 1.8em;
+		bottom: 3.6em;
+		width: 7.2em;
+		height: 10.4em;
+	}
+}
+
 /* advantages ***************************************************************************************** */
 
 .advantages {
@@ -198,6 +359,7 @@ body {
 	height: 50vh;
 	display: flex;
 	align-items: center;
+	overflow-x: hidden;
 }
 .advantages__fish {
 	display: block;
@@ -362,6 +524,82 @@ body {
 	line-height: 1.2;
 	text-align: center;
 }
+
+
+@media (max-width: 700px) {
+	.advantages {
+		height: auto;
+		min-height: 61em;
+		padding-top: 3em;
+		-ms-align-items: flex-start;
+		align-items: flex-start;
+	}
+	.advantages__fish {
+		max-width: 35em;
+		margin-bottom: .8em;
+	}
+	.bullets {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		-webkit-flex-wrap: wrap;
+		-moz-flex-wrap: wrap;
+		-ms-flex-wrap: wrap;
+		-o-flex-wrap: wrap;
+		flex-wrap: wrap;
+		-ms-align-items: flex-start;
+		align-items: flex-start;
+		margin-bottom: 2.5em;
+	}
+	.slogan-wrap {
+		order: 1;
+		font-size: .8em;
+		flex-basis: 100%;
+	}
+	.bullet__info {
+		position: relative;
+		top: initial !important;
+		bottom: initial !important;
+		left: initial !important;
+		right: initial !important;
+		text-align: center;
+		transform: none !important;
+		margin-top: .5em;
+		line-height: 1.2;
+
+	}
+	.bullet {
+		order: 2;
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+		justify-content: center;		
+		margin: 2em 0em;
+		-ms-align-items: flex-start;
+		align-items: center;
+		flex-basis: 22%;
+	}
+	.bullet__info:after {
+		display: none;
+	}
+	.bullet__img {
+		height: auto;
+		width: 7.5em;
+	}
+	.advantages__description {
+		margin: 0 2em;
+	}
+}
+
 
 
 /* PROMO ***************************************************************************************** */
@@ -640,6 +878,77 @@ body {
 }
 
 
+@media (max-width: 700px) {
+	.promo {
+		background-image: none;
+		padding-top: 11em;
+		height: auto;
+	}
+	.promo .slide-inner {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+		width: 90%;
+		box-shadow: 0 0 13px 6px rgba(0,0,0,.2);
+		margin: 2em auto;
+		border-radius: 1em;
+		background-image: url(../img/bg-promo.png);
+		background-position: center top;
+		-webkit-background-size: cover;
+		background-size: cover;
+		padding-top: 4em;
+	}
+	.promo .col--half {
+		width: 100%;
+		float: none;
+	}
+	.product-slider__photo {
+		width: 36em;
+	}
+	.col--info {
+		text-align: center;
+		padding-left: 0;
+		margin-top: 5em;
+	}
+	.product-slide__title {
+		margin-bottom: .5em;
+	}
+	.option-list {
+		margin-bottom: 1em;
+	}
+	.btn--promo-buy {
+		position: absolute;
+		left: 50%;
+		transform: translateX(-50%);
+		top: 110%;
+		width: 90%;
+		font-size: 2.8em;
+	}
+	.btn--promo-buy:after {
+		width: 1em;
+		right: 4em;
+	}
+	.wave-separator {
+		height: 8.6em !important;
+	}
+
+	.promo-nav {
+		display: none;
+	}
+}
+
+
+
+
+
+
 
 
 .section-title {
@@ -670,6 +979,7 @@ body {
 
 .recipes {
 	padding: 9em 0;
+	overflow-x: hidden;
 }
 .recipes-top {
 	display: flex;
@@ -841,6 +1151,98 @@ body {
 	width: 35.924em;
 	height: 63.108em;
 }
+.recipies_static_item:last-of-type {
+	display: none;
+}
+.recipies_static {
+	width: 100%;
+}
+.recipies_static .btn {
+	display: none;
+}
+
+@media (max-width: 700px) {
+	.recipes {
+		padding: 5.5em 0;
+	}
+	.section-title {
+		font-size: 5em;
+	}
+	.recipes-slider-wrap {
+		display: none;
+	}
+	.recipies_static {
+		margin-top: 0em;
+		width: 100%;
+		text-align: center;
+	}
+	.recipies_static .btn {
+		font-size: 3.5em;
+		margin-top: .15em;
+		width: 80%;
+		display: inline-block;
+	}
+	.recipes .section-title {
+		margin-bottom: 1.3em;
+	}
+	.recipies_static_item {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+		margin-bottom: 5em;
+	}
+	.recipies_static_item .col--half {
+		width: 100%;
+		text-align: center;
+	}
+	.recipies_static_item:last-of-type {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+	}
+	.slider-controls {
+		display: none;
+	}
+	.recipe--main {
+		width: 35em;
+		margin: 0 auto;
+		height: 23.3em;
+		border-radius: 1em;
+	}
+	.recipe__info {
+		padding-left: 0;
+		padding-top: 2.5em;
+	}
+	.recipe-name {
+		font-size: 2.5em;
+		margin-bottom: .3em;
+	}
+	.details {
+		justify-content: center;
+		margin: 0;
+	}
+	.time, .portion {
+		font-size: 2em;
+	}
+	.time:after, .portion:after {
+		-webkit-background-size: 100%;
+		background-size: 100%;
+		/*width: 1.3em;*/
+		/*height: 1.3em;*/
+	}
+	.btn--pecipe-more {
+		display: none !important;
+	}
+}
 
 /* COMMENTS */
 .comments {
@@ -853,6 +1255,7 @@ body {
 	display: -o-flex;
 	display: flex;
 	align-items: center;
+	overflow-x: hidden;
 }
 .js-comments-slider {
 	padding: 0 2.598em;
@@ -1005,19 +1408,54 @@ body {
 	outline: none;
 }
 
+
+@media (max-width: 700px) {
+	.comments {
+		height: 100%;
+		padding-top: 4em;
+		min-height: 71em;
+		display: block;
+	}
+	.comments .quote-up,.comments .quote-down {
+		display: none;
+	}
+	.comments .section-title {
+		margin-bottom: .7em;
+	}
+	.comment__text-wrap {
+		font-size: 2.94175em;
+	}
+	.comment__text {
+		height: auto;
+	}
+	.comment {
+		padding: 6.8em 2.3937em 4.315em;
+	}
+	.comments .slick-slide {
+		height: 100%;
+	}
+	.comments .slick-list {
+		height: 100% !important;
+	}
+	.comment__author {
+		left: 0;
+		transform: none;
+	}
+}
+
 /* FAQ */
 .faq {
-	padding: 10.7875em 0;
+	padding: 9.5em 0;
 }
 
 .faq .section-title {
-	margin-bottom: 2.28em;
+	margin-bottom: 1.8em;
 }
 .faq-inner {
-	margin-left: 15%;
+	margin-left: 14%;
 }
 .faq__row {
-	width: 100%;
+	width: 95%;
 	display: -webkit-inline-flex;
 	display: -moz-inline-flex;
 	display: -ms-inline-flex;
@@ -1025,17 +1463,17 @@ body {
 	display: inline-flex;
 	align-items: center;
 	justify-content: flex-start;
-	margin-bottom: 6.3em;
+	margin-bottom: 5.5em;
 }
 .faq__avatar {
-	width: 10.5em;
-	height: 12em;
+	width: 9.5em;
+	height: 11.5em;
 	margin-right: 1.6em;
 	margin-bottom: -4.3em;
 }
 
 .faq__avatar--antei {
-	margin-left: 25px;
+	margin-left: 1em;
 	margin-right: 0;
 	align-self: flex-end;
 }
@@ -1053,10 +1491,10 @@ body {
 	font-family: "Open Sans Condensed", sans-serif;
 	background-color: #00acb5;
 	color: #ffffff;
-	font-size: 2.6em;
+	font-size: 2.3em;
 	font-weight: 700;
 	line-height: 1.2;
-	padding: 24px 50px;
+	padding: .8em 2em .9em 2em;
 }
 
 .faq__buble:before, .faq__buble:after {
@@ -1091,8 +1529,8 @@ body {
 	font-family: "Open Sans", sans-serif;
 	font-size: 1.8em;
 	font-weight: 400;
-	line-height: 1.5;
-	padding: 50px 65px;
+	line-height: 1.4;
+	padding: 2em 3em 2em 3em;
 }
 
 .faq__buble--answer:before {
@@ -1111,6 +1549,7 @@ body {
 
 .fishing {
 	margin-bottom: 30px;
+	transform: scale(.9);
 }
 
 .fishing-map {
@@ -1214,8 +1653,8 @@ body {
 
 .bg-fish-big {
 	background-image: url(../img/faq-ivasi-big.svg);
-	top: 11%;
-	left: 60%;
+	top: 9.5%;
+	left: 58%;
 	width: 20.4167vw;
 	height: 5.3125vw;
 }
@@ -1223,8 +1662,8 @@ body {
 
 .bg-fish-small {
 	background-image: url(../img/faq-ivasi-small.svg);
-	top: 17%;
-	left: 53%;
+	top: 15%;
+	left: 51%;
 	width: 11.7187vw;
 	height: 3.0729vw;
 }
@@ -1241,16 +1680,36 @@ body {
 	/*height: 343px;*/
 	width: 24.4799vw;
 	height: 17.865vw;
-	bottom: 0;
-	left: 5%;
+	bottom: 12%;
+	left: 5.2%;
 }
 
+
+
+@media (max-width: 700px) {
+	#fishing-process {
+		height: 10em;
+		margin-bottom: 1.5em;
+	}
+	.fishing-process-img {
+		height: 10em;
+	}
+	.answer-img {
+		margin-bottom: 1.5em;
+	}
+	.faq__buble--answer {
+		padding: 2em 1em 2em 2em;
+	}
+	.js-question-more {
+		padding-left: 0;
+	}
+}
 /* CERTIFICATE */
 .certificates {
 	background: rgb(146, 206, 212);
 	background: linear-gradient(0deg, rgba(146, 206, 212, 1) 0%, rgba(209, 232, 235, 1) 50%, rgba(255, 255, 255, 1) 100%);
-	padding: 80px 0;
-	min-height: 827px;
+	padding: 8em 0 5em 0;
+	/*min-height: 827px;*/
 }
 
 .certificates .section-title {
@@ -1280,6 +1739,21 @@ body {
 	top: 64%;
 	left: 9%;
 }
+.certificates .slick-slider {
+	height: 48em;
+}
+.certificates .slider-controls {
+	margin-top: 2.2em;
+}
+.certificates .slick-track {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-ms-align-items: flex-end;
+	align-items: flex-end;
+}
 
 .bg-schoolfish-rb {
 	background-image: url(../img/school-rb.svg);
@@ -1306,34 +1780,50 @@ body {
 	-webkit-background-size: cover;
 	background-size: cover;
 	background-repeat: no-repeat;
-	width: 237px;
-	height: 334px;
+	width: 22em;
+	height: 31em;
 	-moz-transition: all 0.6s ease-out;
 	-o-transition: all 0.6s ease-out;
 	-webkit-transition: all 0.6s ease-out;
 	transition: all 0.6s ease-out;
-	margin-top: 59px;
-	margin-bottom: 45px;
+	/*margin-top: 59px;*/
+	margin-bottom: 0;
 }
 
 .certificate.slick-current .certificate__frame {
-	width: 278px;
-	height: 393px;
+	width: 28em;
+	height: 39em;
 	margin-top: 0;
+	margin-bottom: 0;
+}
+.certificates .slick-slide img {
+	width: 100%;
 }
 
 .certificate__title {
-	display: none;
+	/*display: none;*/
 	text-align: center;
 	color: #01336e;
 	font-family: "Open Sans Condensed";
 	font-size: 2.2em;
 	font-weight: 700;
+	margin-top: 1em;
+}
+
+@media (max-width: 700px) {
+	.certificates .slider-controls {
+		display: -webkit-flex;
+		display: -moz-flex;
+		display: -ms-flex;
+		display: -o-flex;
+		display: flex;
+	}
 }
 
 /* SHOPS */
 .shops {
-	padding: 90px 0 120px 0;
+	padding: 7.5em 0 11em 0;
+	overflow-x: hidden;
 }
 
 .shops .section-title {
@@ -1358,7 +1848,7 @@ body {
 
 .shop-icon {
 	width: 20%;
-	padding: 15px;
+	padding: 1.2em;
 
 	display: -webkit-flex;
 	display: -moz-flex;
@@ -1372,7 +1862,7 @@ body {
 
 	text-decoration: none;
 	outline: none;
-	margin-bottom: 100px;
+	margin-bottom: 9em;
 }
 
 .shop-icon img {
@@ -1414,17 +1904,56 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 }
-
+@media (max-width: 700px) {
+	.shops-list {
+		justify-content: space-around;
+	}
+	.shop-icon {
+		width: 45%;
+	}
+	.outer-margin-15 {
+		width: 100%;
+		margin: 0 !important;
+	}
+}
 /* FOOTER */
 footer {
 	background: linear-gradient(0deg, rgba(146, 206, 212, 1) 0%, rgba(209, 232, 235, 1) 50%, rgba(255, 255, 255, 1) 100%);
-	padding: 75px 0 0 0;
+	padding: 6em 0 0 0;
 }
 
 footer .section-title {
-	margin-bottom: 70px;
+	margin-bottom: .8em;
 }
 
+footer .container .row {
+	display: -webkit-flex;
+	display: -moz-flex;
+	display: -ms-flex;
+	display: -o-flex;
+	display: flex;
+	-webkit-flex-direction: row;
+	-moz-flex-direction: row;
+	-ms-flex-direction: row;
+	-o-flex-direction: row;
+	flex-direction: row;
+	-webkit-flex-wrap: wrap;
+	-moz-flex-wrap: wrap;
+	-ms-flex-wrap: wrap;
+	-o-flex-wrap: wrap;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
+footer .container .row .col-xl-12 {
+	flex-basis: 100%;
+}
+footer .container .row .col-xl-4 {
+	flex-basis: 33%;
+}
+footer .container .row .col-xl-4:last-of-type {
+	text-align: right;
+}
 .bg-footer-ship {
 	background-image: url(../img/kontakt-ship.svg);
 	width: 423px;
@@ -1433,6 +1962,45 @@ footer .section-title {
 	height: 16.0938vw;
 	top: 23%;
 	right: 10%;
+}
+
+@media (max-width: 700px) {
+	footer .container .row {
+		-webkit-flex-direction: column;
+		-moz-flex-direction: column;
+		-ms-flex-direction: column;
+		-o-flex-direction: column;
+		flex-direction: column;
+	}
+	footer .container .row .col-xl-4 {
+		flex-basis: 100%;
+		text-align: center;
+		margin-bottom: 3em;
+	}
+	footer .container .row .col-xl-4:last-of-type {
+		text-align: center;
+	}
+	.address {
+		font-size: 2.2em;
+	}
+	.block-title, .phone {
+		margin-bottom: 0em !important;
+	}
+	footer .container .row .col-xl-4:last-of-type .block-title, .phone {
+		margin-bottom: .5em !important;
+	}
+
+	.copyrights {
+		text-align: center;
+		font-size: 2.2em !important;
+	}
+	.to-top-wrap {
+		display: none !important;
+	}
+
+	footer .btn {
+		width: 15em;
+	}
 }
 @media (min-width: 1280px) and (max-width: 1440px) {
 	.bg-footer-ship {
